<resources>
    <string name="app_name">Calculator</string>
    <string name="back">⌫</string>
    <string name="percentage">%</string>
    <string name="ac">C</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_.">.</string>
    <string name="equal">=</string>
    <string name="add">+</string>
    <string name="sub">—</string>
    <string name="mul">x</string>
    <string name="divide">÷</string>
    <string name="sptxt">Made with 💝 - By Jhems</string>
    <string name="action_text">Action Text</string>
    <string name="splashlogo">SplashLogo</string>
</resources>