<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/equationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="end"
        android:textSize="60sp"
        android:text="@string/_0"
        android:paddingEnd="36dp"
        android:maxLines="1"
        android:layout_above="@id/buttons"
        tools:ignore="RtlSymmetry">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:paddingVertical="10dp"
        android:id="@+id/buttons">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_ac"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_margin="12dp"
                android:text="@string/ac"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold"
                app:backgroundTint="@color/grey"
                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_back"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_margin="12dp"
                android:text="@string/back"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:backgroundTint="@color/grey"
                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_percent"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_margin="12dp"
                android:text="@string/percentage"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                app:backgroundTint="@color/grey"
                app:cornerRadius="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_divide"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_margin="12dp"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                app:backgroundTint="@color/orange"
                app:cornerRadius="40dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:layout_width="76dp"
                android:layout_height="76dp"
                app:cornerRadius="40dp"
                app:backgroundTint="@color/darkgrey"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_7"
                android:text="@string/_7"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="76dp"
                android:layout_height="76dp"
                app:cornerRadius="40dp"
                app:backgroundTint="@color/darkgrey"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_8"
                android:text="@string/_8"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="76dp"
                android:layout_height="76dp"
                app:cornerRadius="40dp"
                app:backgroundTint="@color/darkgrey"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_9"
                android:text="@string/_9"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="76dp"
                android:layout_height="76dp"
                app:cornerRadius="40dp"
                app:backgroundTint="@color/orange"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_mul"
                android:text="@string/mul"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:layout_width="76dp"
                android:layout_height="76dp"
                app:cornerRadius="40dp"
                app:backgroundTint="@color/darkgrey"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_4"
                android:text="@string/_4"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="76dp"
                android:layout_height="76dp"
                app:cornerRadius="40dp"
                app:backgroundTint="@color/darkgrey"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_5"
                android:text="@string/_5"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="76dp"
                android:layout_height="76dp"
                app:cornerRadius="40dp"
                app:backgroundTint="@color/darkgrey"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_6"
                android:text="@string/_6"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="76dp"
                android:layout_height="76dp"
                app:cornerRadius="40dp"
                app:backgroundTint="@color/orange"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_sub"
                android:text="@string/sub"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:layout_width="76dp"
                android:layout_height="76dp"
                app:cornerRadius="40dp"
                app:backgroundTint="@color/darkgrey"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_1"
                android:text="@string/_1"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="76dp"
                android:layout_height="76dp"
                app:cornerRadius="40dp"
                app:backgroundTint="@color/darkgrey"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_2"
                android:text="@string/_2"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="76dp"
                android:layout_height="76dp"
                app:cornerRadius="40dp"
                app:backgroundTint="@color/darkgrey"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_3"
                android:text="@string/_3"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="76dp"
                android:layout_height="76dp"
                app:cornerRadius="40dp"
                app:backgroundTint="@color/orange"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_add"
                android:text="@string/add"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:layout_width="176dp"
                android:layout_height="76dp"
                app:cornerRadius="40dp"
                app:backgroundTint="@color/darkgrey"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_0"
                android:text="@string/_0"
                android:gravity="center_vertical"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="76dp"
                android:layout_height="76dp"
                app:cornerRadius="40dp"
                app:backgroundTint="@color/darkgrey"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_point"
                android:text="@string/_."
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="76dp"
                android:layout_height="76dp"
                app:cornerRadius="40dp"
                app:backgroundTint="@color/orange"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_equal"
                android:text="@string/equal"
                />

        </LinearLayout>


    </LinearLayout>


  </RelativeLayout>